--- a/notebooks/figures/HighK-unimodal.ipynb
+++ b/notebooks/figures/HighK-unimodal.ipynb
@@ -30,7 +30,7 @@
     "from twoface.config import TWOFACE_CACHE_PATH\n",
     "from twoface.samples_analysis import unimodal_P, MAP_sample\n",
     "from twoface.db import (db_connect, AllStar, AllVisit, AllVisitToAllStar, NessRG,\n",
-    "                        StarResult, Status, JokerRun, initialize_db)\n",
+    "                        StarResult, Status, JokerRun)\n",
     "from twoface.plot import plot_two_panel, plot_phase_fold, _RV_LBL\n",
     "from twoface.mass import get_m2_min, mf"
    ]
@@ -205,7 +205,10 @@
     "    for i in range(4):\n",
     "        axes[i, 0].set_ylabel(_RV_LBL.format(u.km/u.s))\n",
     "\n",
+    "    fig.suptitle('Example stars from the high-$K$, unimodal sample', \n",
+    "                 x=0.55, y=0.96, fontsize=18)\n",
     "    fig.tight_layout()\n",
+    "    fig.subplots_adjust(top=0.92)\n",
     "    fig.savefig(path.join(plot_path, 'highK-unimodal.pdf'))"
    ]
   },
@@ -397,6 +400,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Finally, add a binary flag \"DR14RC\" if in DR14 RC catalog"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rc = Table.read('/Users/adrian/data/APOGEE_DR14/apogee-rc-DR14.fits')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_catalog['DR14RC'] = np.isin(full_catalog['APOGEE_ID'], rc['APOGEE_ID'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "TODO: describe in README with data to use `Table.read('', astropy_native=True)`"
    ]
   },
@@ -407,6 +435,15 @@
    "outputs": [],
    "source": [
     "len(full_catalog)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_catalog['M1'][full_catalog['M1'].mask] = np.nan"
    ]
   },
   {
@@ -455,8 +492,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_path = '../../plots/emcee_converged'\n",
-    "os.makedirs(_path, exist_ok=True)"
+    "emcee_converged = full_catalog[full_catalog['emcee_converged']]"
    ]
   },
   {
@@ -465,7 +501,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "emcee_converged = full_catalog[full_catalog['emcee_converged']]"
+    "_path = '../../plots/emcee_converged'\n",
+    "os.makedirs(_path, exist_ok=True)"
    ]
   },
   {
@@ -639,7 +676,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
