--- a/notebooks/figures/HighK.ipynb
+++ b/notebooks/figures/HighK.ipynb
@@ -92,6 +92,87 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Bulk properties"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sp = np.array(session.query(AllStar.logg, AllStar.logg_err, AllStar.teff, AllStar.teff_err)\n",
+    "                     .join(StarResult).filter(StarResult.status_id>0)\n",
+    "                     .filter(StarResult.high_K).all())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1, 1, figsize=(6, 6))\n",
+    "ax.errorbar(sp[:, 2], sp[:, 0], \n",
+    "            xerr=sp[:, 3], yerr=sp[:, 1],\n",
+    "            alpha=0.2, marker='o', linestyle='none')\n",
+    "ax.set_xlim(5750, 3450)\n",
+    "ax.set_ylim(4, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Ks = np.array(session.query(AllStar.k)\n",
+    "                     .join(StarResult).filter(StarResult.status_id>0)\n",
+    "                     .filter(StarResult.high_K).all())[:,0]\n",
+    "plt.hist(Ks, bins='auto');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nvisits = np.array(session.query(func.count(AllVisit.id)).join(AllVisitToAllStar, AllStar, StarResult)\n",
+    "                          .filter(StarResult.status_id>0)\n",
+    "                          .filter(StarResult.high_K)\n",
+    "                          .group_by(AllStar.apogee_id)\n",
+    "                          .having(func.count(AllVisit.id) >= 3).all())\n",
+    "\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(6, 4))\n",
+    "\n",
+    "_ = ax.hist(nvisits, bins=np.logspace(0.5, 7, 22, base=2.), rasterized=True)\n",
+    "ax.set_xscale('log', basex=2)\n",
+    "ax.set_yscale('log')\n",
+    "ax.set_xlim(2.5, 140)\n",
+    "ax.set_ylim(0.8, 10**5.1)\n",
+    "\n",
+    "ax.xaxis.set_ticks(2**np.arange(2, 7+1, 1))\n",
+    "ax.xaxis.set_ticklabels([str(x) for x in ax.get_xticks()])\n",
+    "\n",
+    "ax.yaxis.set_ticks(10**np.arange(0, 5+1, 1))\n",
+    "ax.set_xlabel('$N$ visits')\n",
+    "ax.set_ylabel('$N$ stars')\n",
+    "\n",
+    "fig.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example light curves"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -219,6 +300,135 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "To upload to vizier to cross-match with APASS:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import astropy.coordinates as coord\n",
+    "from astropy.table import Table, join"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = session.query(AllStar.apogee_id, AllStar.ra, AllStar.dec).join(StarResult)\\\n",
+    "             .filter(StarResult.status_id>0).filter(StarResult.high_K).all()\n",
+    "res = np.array(res, dtype=[('APOGEE_ID', 'U20'), ('ra', 'f8'), ('dec', 'f8')])\n",
+    "res = Table(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res['ra', 'dec'].write('../../cache/highK-pos.csv', format='ascii.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "apass = Table.read('../../data/highK-apass.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(apass['rpmag'][~apass['rpmag'].mask], bins='auto');\n",
+    "plt.xlabel('$r$ [mag]')\n",
+    "plt.tight_layout()\n",
+    "plt.savefig('/Users/adrian/Downloads/rmag.png', dpi=200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "allstar = Table.read('/Users/adrian/data/APOGEE_DR14/allStar-l31c.2.fits')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_tbl = join(res, allstar['APOGEE_ID', 'K'], keys='APOGEE_ID')\n",
+    "_, idx = np.unique(res['APOGEE_ID'], return_index=True)\n",
+    "full_tbl = full_tbl[idx]\n",
+    "full_tbl.rename_column('K', 'K_mag')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = coord.SkyCoord(ra=full_tbl['ra']*u.deg, dec=full_tbl['dec']*u.deg)\n",
+    "apass_c = coord.SkyCoord(ra=apass['RAJ2000']*u.deg, dec=apass['DEJ2000']*u.deg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idx, sep, _ = c.match_to_catalog_sky(apass_c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_tbl['r_mag'] = np.full(len(full_tbl), np.nan)\n",
+    "full_tbl['r_mag'][(sep < 5*u.arcsec)] = apass['rpmag'][idx[(sep < 5*u.arcsec)]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_tbl = full_tbl[np.argsort(full_tbl['APOGEE_ID'])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_tbl.write('../../cache/APOGEE-binary-candidates.fits', format='fits')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -242,7 +452,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
