--- a/notebooks/figures/Untitled.ipynb
+++ b/notebooks/figures/Untitled.ipynb
@@ -12,7 +12,7 @@
     "# Third-party\n",
     "from astropy.io import fits\n",
     "from astropy.stats import median_absolute_deviation\n",
-    "from astropy.table import Table, join\n",
+    "from astropy.table import Table, QTable, join\n",
     "from astropy.time import Time\n",
     "import astropy.units as u\n",
     "import matplotlib as mpl\n",
@@ -28,11 +28,11 @@
     "from thejoker import JokerSamples\n",
     "\n",
     "from twoface.config import TWOFACE_CACHE_PATH\n",
-    "from twoface.samples_analysis import unimodal_P\n",
+    "from twoface.samples_analysis import unimodal_P, MAP_sample\n",
     "from twoface.db import (db_connect, AllStar, AllVisit, AllVisitToAllStar, NessRG,\n",
     "                        StarResult, Status, JokerRun, initialize_db)\n",
     "from twoface.plot import plot_two_panel, plot_phase_fold, _RV_LBL\n",
-    "from twoface.mass import get_m2_min, mf"
+    "from twoface.mass import get_m2_min, mf, period_at_surface"
    ]
   },
   {
@@ -42,6 +42,7 @@
    "outputs": [],
    "source": [
     "plot_path = '../../paper/1-catalog/figures/'\n",
+    "table_path = '../../paper/1-catalog/tables/'\n",
     "\n",
     "Session, _ = db_connect(path.join(TWOFACE_CACHE_PATH, 'apogee.sqlite'))\n",
     "session = Session()\n",
@@ -56,7 +57,198 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "full_catalog = Table.read('../../data/products/high-K-unimodal.fits', astropy_native=True)"
+    "run = session.query(JokerRun).limit(1).one()\n",
+    "joker_pars = run.get_joker_params()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_catalog = QTable.read(path.join(table_path, 'high-K-unimodal.fits'), \n",
+    "                           astropy_native=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# cat = full_catalog\n",
+    "cat = full_catalog[(full_catalog['P_err']/full_catalog['P']) < 0.2]\n",
+    "\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(6, 6))\n",
+    "\n",
+    "ax.scatter(cat['P'], cat['LOGG'], s=15)\n",
+    "ax.errorbar(cat['P'].value, cat['LOGG'],\n",
+    "            xerr=cat['P_err'].value, \n",
+    "            yerr=cat['LOGG_ERR'],\n",
+    "            marker='', linestyle='none', zorder=-10, \n",
+    "            alpha=0.7, color='#aaaaaa')\n",
+    "\n",
+    "loggs = np.linspace(0, 4, 128)\n",
+    "_style = dict(marker='', zorder=-100)\n",
+    "P_surface = period_at_surface(1.35*u.Msun, loggs, 0., M2=0.4*u.Msun)\n",
+    "ax.plot(P_surface, loggs, ls='-', color='tab:orange', **_style)\n",
+    "P_surface = period_at_surface(1.35*u.Msun, loggs, 0.5, M2=0.4*u.Msun)\n",
+    "ax.plot(P_surface, loggs, ls='--', color='tab:orange', **_style)\n",
+    "\n",
+    "ax.set_xlim(0.8, 2500)\n",
+    "ax.set_ylim(4, 0)\n",
+    "ax.set_xscale('log')\n",
+    "\n",
+    "ax.set_xlabel('period, $P$ [day]')\n",
+    "ax.set_ylabel(r'$\\log g$')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# cat = full_catalog\n",
+    "cat = full_catalog[full_catalog['emcee_converged'] & (full_catalog['LOGG'] > -9999)]\n",
+    "# cat = full_catalog[full_catalog['emcee_converged'] & \n",
+    "#                    np.logical_not(np.isin(full_catalog['APOGEE_ID'], suspicious_ids))]\n",
+    "\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(6, 6))\n",
+    "\n",
+    "P_surface = period_at_surface(1.35*u.Msun, cat['LOGG'], cat['e'], 0.4*u.Msun)\n",
+    "\n",
+    "ax.scatter(cat['P']/P_surface, cat['e'])\n",
+    "# ax.errorbar((full_catalog['P']/P_surface).value, full_catalog['LOGG'],\n",
+    "#             xerr=(full_catalog['P_err']/P_surface).value, \n",
+    "#             yerr=full_catalog['LOGG_ERR'],\n",
+    "#             marker='', linestyle='none', zorder=-10)\n",
+    "\n",
+    "ax.axvline(1., color='#aaaaaa', zorder=-100)\n",
+    "# ax.axvline(10., color='#aaaaaa', zorder=-100)\n",
+    "\n",
+    "ax.set_xlabel(r'$P / P_{\\rm surface}$')\n",
+    "ax.set_ylabel(r'$e$')\n",
+    "\n",
+    "ax.set_xlim(0.01, 1000)\n",
+    "ax.set_ylim(0, 1)\n",
+    "ax.set_xscale('log')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# cat = full_catalog\n",
+    "cat = full_catalog[full_catalog['emcee_converged'] & (full_catalog['LOGG'] > -9999)]\n",
+    "# cat = full_catalog[full_catalog['emcee_converged'] & \n",
+    "#                    np.logical_not(np.isin(full_catalog['APOGEE_ID'], suspicious_ids))]\n",
+    "\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(6, 6))\n",
+    "\n",
+    "P_surface = period_at_surface(1.35*u.Msun, cat['LOGG'], \n",
+    "                              cat['e'], 0.4*u.Msun)\n",
+    "\n",
+    "ax.scatter(cat['P']/P_surface, cat['LOGG'])\n",
+    "# ax.errorbar((full_catalog['P']/P_surface).value, full_catalog['LOGG'],\n",
+    "#             xerr=(full_catalog['P_err']/P_surface).value, \n",
+    "#             yerr=full_catalog['LOGG_ERR'],\n",
+    "#             marker='', linestyle='none', zorder=-10)\n",
+    "\n",
+    "ax.axvline(1., color='#aaaaaa', zorder=-100)\n",
+    "\n",
+    "ax.set_xlabel(r'$P / P_{\\rm surface}$')\n",
+    "ax.set_ylabel(r'$\\log g$')\n",
+    "\n",
+    "ax.set_xlim(0.01, 1000)\n",
+    "ax.set_ylim(4, 0)\n",
+    "ax.set_xscale('log')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cat = full_catalog[(full_catalog['M2_min_err'] / full_catalog['M2_min']) < 0.2]\n",
+    "# cat = full_catalog[full_catalog['emcee_converged'] & (full_catalog['LOGG'] > -9999)]\n",
+    "\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(6, 6))\n",
+    "\n",
+    "P_surface = period_at_surface(1.35*u.Msun, cat['LOGG'], \n",
+    "                              cat['e'], 0.4*u.Msun)\n",
+    "\n",
+    "ax.scatter(cat['M1'], cat['M2_min']/cat['M1'])\n",
+    "ax.errorbar(cat['M1'].value, cat['M2_min'].value/cat['M1'].value,\n",
+    "            xerr=cat['M1_err'].value, \n",
+    "            yerr=cat['M2_min_err'].value,\n",
+    "            marker='', linestyle='none', zorder=-10)\n",
+    "\n",
+    "# ax.axvline(1., color='#aaaaaa', zorder=-100)\n",
+    "\n",
+    "# ax.set_xlabel(r'$P / P_{\\rm surface}$')\n",
+    "# ax.set_ylabel(r'$\\log g$')\n",
+    "\n",
+    "# ax.set_xlim(0.01, 1000)\n",
+    "ax.set_ylim(0, 1.)\n",
+    "# ax.set_xscale('log')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "session.query(AllStar).join(StarResult, NessRG).filter(StarResult.status_id>0)\\\n",
+    "       .filter(StarResult.high_K).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# row = cat[(cat['P']/P_surface) < 3.][1]\n",
+    "# visits = session.query(AllVisit).filter(AllVisit.apogee_id == row['APOGEE_ID']).all()\n",
+    "# visit = visits[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with h5py.File(mcmc_samples_file, 'r') as mcmc_f, h5py.File(samples_file, 'r') as f:\n",
+    "    for row in cat[(cat['P']/P_surface) < 3.]:\n",
+    "        star = AllStar.get_apogee_id(session, row['APOGEE_ID'])\n",
+    "        data = star.apogeervdata()\n",
+    "\n",
+    "        if star.apogee_id in mcmc_f:\n",
+    "            samples = JokerSamples.from_hdf5(mcmc_f[star.apogee_id])\n",
+    "            print('mcmc')\n",
+    "        else:\n",
+    "            samples = JokerSamples.from_hdf5(f[star.apogee_id])\n",
+    "            print('thejoker')\n",
+    "\n",
+    "        samples.t0 = data.t0\n",
+    "\n",
+    "        fig = plot_two_panel(data, samples, \n",
+    "                             plot_data_orbits_kw=dict(n_times=16384,                \n",
+    "                                                      highlight_P_extrema=False))\n",
+    "        fig.axes[0].set_title('logg={0:.2f}, P = {1:.2f}'.format(star.logg, samples['P'][0]))\n",
+    "        fig.tight_layout()\n",
+    "        \n",
+    "        fig, ax = plt.subplots(1, 1)\n",
+    "        ax.set_title(row['STARFLAGS'], fontsize=12)\n",
+    "        fig = plot_phase_fold(data, MAP_sample(data, samples, joker_params=joker_pars), \n",
+    "                              ax=ax)"
    ]
   },
   {
@@ -247,169 +439,6 @@
     "        ax.set_title(apogee_id)\n",
     "        fig.tight_layout()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Query Kepler/K2 data:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import glob\n",
-    "import time\n",
-    "\n",
-    "from astroquery.mast import Observations\n",
-    "import astropy.coordinates as coord"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "kplr2apogee = dict()\n",
-    "for row in tqdm.tqdm(full_catalog[132:]): # HACK\n",
-    "    c = coord.SkyCoord(row['RA']*u.deg, row['DEC']*u.deg)\n",
-    "    \n",
-    "    mastDataTable = Observations.query_region(c, radius=10*u.arcsec)\n",
-    "    kepler_data = mastDataTable[(mastDataTable['instrument_name'] == 'Kepler') & (mastDataTable['project'] == 'hlsp_everest')]\n",
-    "    if len(kepler_data) > 0:\n",
-    "        print('{0} - {1}'.format(row['APOGEE_ID'], kepler_data[0]['target_name']))\n",
-    "        kplr2apogee[kepler_data[0]['target_name']] = row['APOGEE_ID']\n",
-    "        \n",
-    "        print('\\t woohoo!')\n",
-    "        obsProducts = Observations.get_product_list(kepler_data[0])\n",
-    "        print('\\t Number of files: {}'.format(len(obsProducts)))\n",
-    "        \n",
-    "        downloaded_products = Observations.download_products(obsProducts,\n",
-    "                                  mrp_only=False,\n",
-    "                                  extension=['.fits'])\n",
-    "        \n",
-    "    time.sleep(0.2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for dir_ in glob.glob('mastDownload/K2/everest*'):\n",
-    "    everest_id = path.basename(dir_).split('-')[0]\n",
-    "    row = full_catalog[full_catalog['APOGEE_ID'] == kplr2apogee[everest_id]]\n",
-    "    \n",
-    "    lc_file = glob.glob(path.join(dir_, '*.fits'))[0]\n",
-    "    lc = fits.getdata(lc_file)\n",
-    "    \n",
-    "    fig, ax = plt.subplots(1, 1, figsize=(15, 5))\n",
-    "    x = (lc['TIME']/row['P']) % 1.\n",
-    "    ax.errorbar(x, lc['FLUX'], lc['FRAW_ERR'], marker='.', linestyle='', alpha=0.4)\n",
-    "    \n",
-    "    # determine ylim\n",
-    "    std = 1.5 * median_absolute_deviation(lc['FLUX'], ignore_nan=True)\n",
-    "    med = np.nanmedian(lc['FLUX'])\n",
-    "    ax.set_ylim(med-3*std, med+3*std)\n",
-    "    ax.set_xlim(0, 1)\n",
-    "    \n",
-    "    ax.set_ylabel('EVEREST flux')\n",
-    "    ax.set_xlabel('phase')\n",
-    "    \n",
-    "    ax.set_title('{0} / {1}'.format(kplr2apogee[everest_id], everest_id))\n",
-    "    fig.tight_layout()\n",
-    "    fig.savefig('../../plots/kepler/everest-{0}.png'.format(kplr2apogee[everest_id]), dpi=250)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## What about exoplanets?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from astropy.io import ascii\n",
-    "exop = ascii.read('/Users/adrian/projects/gaiadr1/data/exoplanets.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "exop = exop[np.logical_not(exop['ECC'].mask | exop['UECC'].mask | \n",
-    "                           exop['PER'].mask | exop['UPER'].mask | \n",
-    "                           exop['LOGG'].mask)]\n",
-    "len(exop)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, ax = plt.subplots(1, 1, figsize=(6, 5))\n",
-    "\n",
-    "cs = ax.scatter(exop['PER'], exop['ECC'], c=exop['LOGG'], \n",
-    "                vmin=0.5, vmax=3.5, marker='o', \n",
-    "                cmap='magma_r', edgecolor='k', \n",
-    "                linewidth=0.5, s=18)\n",
-    "\n",
-    "ax.errorbar(exop['PER'], exop['ECC'],\n",
-    "            xerr=exop['UPER'], yerr=exop['UECC'], \n",
-    "            marker='', linestyle='none', zorder=-10, \n",
-    "            color='#555555', alpha=0.75)\n",
-    "\n",
-    "ax.set_xscale('log')\n",
-    "ax.set_xlim(0.8, 2000)\n",
-    "ax.set_ylim(-0.02, 1.02)\n",
-    "\n",
-    "cb = fig.colorbar(cs)\n",
-    "cb.set_label(r'$\\log g$')\n",
-    "\n",
-    "ax.set_xlabel('period, $P$ [day]')\n",
-    "ax.set_ylabel('eccentricity, $e$')\n",
-    "\n",
-    "ax.set_title('exoplanets.org')\n",
-    "\n",
-    "fig.tight_layout()\n",
-    "fig.set_facecolor('w')\n",
-    "fig.savefig('../../plots/exoplanets_P-e.png', dpi=250)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
