remake some figures

--- a/notebooks/figures/HighK-multimodal.ipynb
+++ b/notebooks/figures/HighK-multimodal.ipynb
@@ -74,6 +74,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Make the catalog:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -144,6 +151,31 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--- \n",
+    "\n",
+    "# Make paper figure:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_catalog = Table.read(path.join(table_path, 'high'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# with h5py.File(samples_file, 'r') as f:\n",
     "#     for star in tqdm.tqdm(np.array(high_K_stars)[bimodal][:10]):\n",
@@ -160,8 +192,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.random.seed(32)\n",
-    "# np.random.seed(242)\n",
+    "np.random.seed(36)\n",
     "\n",
     "rc = {\n",
     "    'axes.labelsize': 18,\n",
@@ -210,22 +241,10 @@
     "    ax2.set_xlabel('period, $P$ [day]')\n",
     "\n",
     "    fig.tight_layout()\n",
-    "    fig.subplots_adjust(left=0.125, right=0.95, hspace=0.2, wspace=0.4)"
+    "    fig.subplots_adjust(left=0.125, right=0.95, hspace=0.2, wspace=0.4)\n",
+    "    \n",
+    "    fig.savefig(path.join(plot_path, 'highK-multimodal.pdf'), dpi=250)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -752,7 +771,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
