--- a/notebooks/figures/HighK-unimodal.ipynb
+++ b/notebooks/figures/HighK-unimodal.ipynb
@@ -64,8 +64,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run = session.query(JokerRun).limit(1).one()\n",
-    "joker_pars = run.get_joker_params()"
+    "high_K_stars = session.query(AllStar).join(StarResult).filter(StarResult.status_id>0).filter(StarResult.high_K).all()\n",
+    "len(high_K_stars)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Make the catalog:"
    ]
   },
   {
@@ -74,8 +81,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "high_K_stars = session.query(AllStar).join(StarResult).filter(StarResult.status_id>0).filter(StarResult.high_K).all()\n",
-    "len(high_K_stars)"
+    "run = session.query(JokerRun).limit(1).one()\n",
+    "joker_pars = run.get_joker_params()"
    ]
   },
   {
@@ -149,82 +156,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.random.seed(123)\n",
-    "\n",
-    "rc = {\n",
-    "    'axes.labelsize': 18,\n",
-    "    'xtick.labelsize': 14,\n",
-    "    'ytick.labelsize': 14\n",
-    "}\n",
-    "    \n",
-    "rand_subset = np.random.choice(unimodal_converged_idx, size=8, \n",
-    "                               replace=False)\n",
-    "\n",
-    "with mpl.rc_context(rc):\n",
-    "    fig, axes = plt.subplots(4, 2, figsize=(8, 10), sharex=True)\n",
-    "\n",
-    "    for i, idx in enumerate(rand_subset):\n",
-    "        ax = axes.flat[i]\n",
-    "\n",
-    "        star = high_K_stars[idx]\n",
-    "        data = star.apogeervdata()\n",
-    "\n",
-    "        if unimodal_mcmc[idx] & converged_mcmc[idx]:\n",
-    "            fn = mcmc_samples_file\n",
-    "            print('mcmc')\n",
-    "        else:\n",
-    "            fn = samples_file\n",
-    "            print('thejoker')\n",
-    "\n",
-    "        with h5py.File(fn, 'r') as f:\n",
-    "            samples = JokerSamples.from_hdf5(f[star.apogee_id])\n",
-    "\n",
-    "        samples.t0 = data.t0\n",
-    "    \n",
-    "        sample = MAP_sample(data, samples, joker_pars)\n",
-    "        fig = plot_phase_fold(data, sample, ax=ax, \n",
-    "                              jitter_errorbar=True, label=False)\n",
-    "        xlim = ax.get_xlim()\n",
-    "        ylim = (data.rv.value.min(), data.rv.value.max())\n",
-    "        yspan = ylim[1]-ylim[0]\n",
-    "        ylim = ax.set_ylim(ylim[0]-0.35*yspan, ylim[1]+0.35*yspan)\n",
-    "\n",
-    "        text = ('{0},  '.format(star.apogee_id) + \n",
-    "                '$P = {0.value:.2f}$ {0.unit:latex},  '.format(sample['P']) + \n",
-    "                '$e = {0:.2f}$'.format(sample['e']))\n",
-    "        ax.text(xlim[0] + (xlim[1]-xlim[0])/15,\n",
-    "                ylim[1] - (ylim[1]-ylim[0])/20,\n",
-    "                text, fontsize=10, va='top', ha='left')\n",
-    "        # _ = plot_two_panel(data, samples)\n",
-    "\n",
-    "    ax.set_xlim(-0.02, 1.02)\n",
-    "\n",
-    "    for i in [0,1]:\n",
-    "        axes[-1, i].set_xlabel(r'phase, $\\frac{M-M_0}{2\\pi}$')\n",
-    "\n",
-    "    for i in range(4):\n",
-    "        axes[i, 0].set_ylabel(_RV_LBL.format(u.km/u.s))\n",
-    "\n",
-    "    fig.suptitle('Example stars from the high-$K$, unimodal sample', \n",
-    "                 x=0.55, y=0.96, fontsize=18)\n",
-    "    fig.tight_layout()\n",
-    "    fig.subplots_adjust(top=0.92)\n",
-    "    fig.savefig(path.join(plot_path, 'highK-unimodal.pdf'))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Produce catalog table:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "unimodal_stars = np.array(high_K_stars)[unimodal_mask]\n",
     "unimodal_converged = converged_mcmc[unimodal_mask]"
    ]
@@ -241,7 +172,7 @@
     "    rows[k] = []\n",
     "    rows[k + '_err'] = []\n",
     "rows['t0'] = []\n",
-    "rows['emcee_converged'] = []\n",
+    "rows['converged'] = []\n",
     "rows['Gelman-Rubin'] = []\n",
     "\n",
     "with h5py.File(mcmc_samples_file, 'r') as mcmc_f, h5py.File(samples_file, 'r') as joker_f:\n",
@@ -261,7 +192,7 @@
     "            rows[k+'_err'].append(1.5 * median_absolute_deviation(samples[k]))\n",
     "            \n",
     "        rows['t0'].append(data.t0.tcb.mjd)\n",
-    "        rows['emcee_converged'].append(unimodal_converged[i])\n",
+    "        rows['converged'].append(unimodal_converged[i])\n",
     "        rows['Gelman-Rubin'].append(R)\n",
     "        \n",
     "for k in rows:\n",
@@ -422,13 +353,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "TODO: describe in README with data to use `Table.read('', astropy_native=True)`"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -452,7 +376,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "full_catalog.write(path.join(table_path, 'high-K-unimodal.fits'), overwrite=True)"
+    "full_catalog.write(path.join(table_path, 'highK-unimodal.fits'), overwrite=True)"
    ]
   },
   {
@@ -477,6 +401,114 @@
     "        c2 = c2 + ' '*(24 - len(c2))\n",
     "        \n",
     "    print('{0} & {1} & <description> \\\\\\\\'.format(c1, c2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TODO: describe in README with data to use `Table.read('', astropy_native=True)`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "# Make paper figure:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_catalog = Table.read(path.join(table_path, 'highK-unimodal.fits'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = np.array(full_catalog[full_catalog['converged'] & np.isfinite(full_catalog['Gelman-Rubin'][:, 0])]['APOGEE_ID'],\n",
+    "               dtype='U20')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.seed(42)\n",
+    "\n",
+    "rc = {\n",
+    "    'axes.labelsize': 18,\n",
+    "    'xtick.labelsize': 14,\n",
+    "    'ytick.labelsize': 14\n",
+    "}\n",
+    "    \n",
+    "subset = full_catalog[full_catalog['converged'] & np.isfinite(full_catalog['Gelman-Rubin'][:, 0])]\n",
+    "rand_subset = np.random.choice(len(subset), size=8, replace=False)\n",
+    "rand_subset = rand_subset[np.argsort(subset['e'][rand_subset])]\n",
+    "\n",
+    "with h5py.File(samples_file, 'r') as jok_f, h5py.File(mcmc_samples_file, 'r') as mcmc_f:\n",
+    "    with mpl.rc_context(rc):\n",
+    "        fig, axes = plt.subplots(4, 2, figsize=(8, 10), sharex=True)\n",
+    "\n",
+    "        for i, idx in enumerate(rand_subset):\n",
+    "            ax = axes.flat[i]\n",
+    "\n",
+    "            star = AllStar.get_apogee_id(session, subset[idx]['APOGEE_ID'])\n",
+    "            data = star.apogeervdata()\n",
+    "\n",
+    "            if apogee_id in mcmc_f:\n",
+    "                f = mcmc_f\n",
+    "                print('mcmc')\n",
+    "            else:\n",
+    "                f = jok_f\n",
+    "                print('thejoker')\n",
+    "\n",
+    "            samples = JokerSamples.from_hdf5(f[star.apogee_id])\n",
+    "            samples.t0 = data.t0\n",
+    "\n",
+    "            if len(samples) > 1:\n",
+    "                sample = MAP_sample(data, samples, joker_pars)\n",
+    "            else:\n",
+    "                sample = samples[0]\n",
+    "\n",
+    "            fig = plot_phase_fold(data, sample, ax=ax, \n",
+    "                                  jitter_errorbar=True, label=False)\n",
+    "            xlim = ax.get_xlim()\n",
+    "            ylim = (data.rv.value.min(), data.rv.value.max())\n",
+    "            yspan = ylim[1]-ylim[0]\n",
+    "            ylim = ax.set_ylim(ylim[0]-0.35*yspan, ylim[1]+0.35*yspan)\n",
+    "\n",
+    "            text = ('{0},  '.format(star.apogee_id) + \n",
+    "                    '$P = {0.value:.2f}$ {0.unit:latex},  '.format(sample['P']) + \n",
+    "                    '$e = {0:.2f}$'.format(sample['e']))\n",
+    "            ax.text(xlim[0] + (xlim[1]-xlim[0])/15,\n",
+    "                    ylim[1] - (ylim[1]-ylim[0])/20,\n",
+    "                    text, fontsize=10, va='top', ha='left')\n",
+    "            # _ = plot_two_panel(data, samples)\n",
+    "\n",
+    "        ax.set_xlim(-0.02, 1.02)\n",
+    "\n",
+    "        for i in [0,1]:\n",
+    "            axes[-1, i].set_xlabel(r'phase, $\\frac{M-M_0}{2\\pi}$')\n",
+    "\n",
+    "        for i in range(4):\n",
+    "            axes[i, 0].set_ylabel(_RV_LBL.format(u.km/u.s))\n",
+    "\n",
+    "        fig.suptitle('Example stars from the high-$K$, unimodal sample', \n",
+    "                     x=0.55, y=0.96, fontsize=18)\n",
+    "        fig.tight_layout()\n",
+    "        fig.subplots_adjust(top=0.92)\n",
+    "        fig.savefig(path.join(plot_path, 'highK-unimodal.pdf'))"
    ]
   },
   {
@@ -676,7 +708,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
