--- a/notebooks/figures/HighK.ipynb
+++ b/notebooks/figures/HighK.ipynb
@@ -51,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "See: Sample K cuts.ipynb for setting `StarResult.high_K`"
+    "### See: Sample K cuts.ipynb for setting `StarResult.high_K`"
    ]
   },
   {
@@ -300,135 +300,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "\n",
-    "To upload to vizier to cross-match with APASS:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import astropy.coordinates as coord\n",
-    "from astropy.table import Table, join"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res = session.query(AllStar.apogee_id, AllStar.ra, AllStar.dec).join(StarResult)\\\n",
-    "             .filter(StarResult.status_id>0).filter(StarResult.high_K).all()\n",
-    "res = np.array(res, dtype=[('APOGEE_ID', 'U20'), ('ra', 'f8'), ('dec', 'f8')])\n",
-    "res = Table(res)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res['ra', 'dec'].write('../../cache/highK-pos.csv', format='ascii.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "apass = Table.read('../../data/highK-apass.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.hist(apass['rpmag'][~apass['rpmag'].mask], bins='auto');\n",
-    "plt.xlabel('$r$ [mag]')\n",
-    "plt.tight_layout()\n",
-    "plt.savefig('/Users/adrian/Downloads/rmag.png', dpi=200)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "allstar = Table.read('/Users/adrian/data/APOGEE_DR14/allStar-l31c.2.fits')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "full_tbl = join(res, allstar['APOGEE_ID', 'K'], keys='APOGEE_ID')\n",
-    "_, idx = np.unique(res['APOGEE_ID'], return_index=True)\n",
-    "full_tbl = full_tbl[idx]\n",
-    "full_tbl.rename_column('K', 'K_mag')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c = coord.SkyCoord(ra=full_tbl['ra']*u.deg, dec=full_tbl['dec']*u.deg)\n",
-    "apass_c = coord.SkyCoord(ra=apass['RAJ2000']*u.deg, dec=apass['DEJ2000']*u.deg)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "idx, sep, _ = c.match_to_catalog_sky(apass_c)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "full_tbl['r_mag'] = np.full(len(full_tbl), np.nan)\n",
-    "full_tbl['r_mag'][(sep < 5*u.arcsec)] = apass['rpmag'][idx[(sep < 5*u.arcsec)]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "full_tbl = full_tbl[np.argsort(full_tbl['APOGEE_ID'])]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "full_tbl.write('../../cache/APOGEE-binary-candidates.fits', format='fits')"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -452,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
