--- a/paper/1-catalog/tables/unimodal-schema.tex
+++ b/paper/1-catalog/tables/unimodal-schema.tex
@@ -29,8 +29,8 @@
         \texttt{v0\_err}           & $\mathrm{km\,s^{-1}}$    & \\
         \texttt{t0}                & Barycentric MJD          &
             $t_0$, reference epoch \\
-        \texttt{emcee\_converged}  &                          & binary flag
-            indicating whether MCMC converged \\
+        \texttt{converged}  &                          & binary flag
+            indicating whether the sampling converged \\
         \texttt{Gelman-Rubin}      &                          &
             Gelman-Rubin statistic for each MCMC parameter \\
         \texttt{M1}                & $\mathrm{M_{\odot}}$     &
