--- a/notebooks/figures/Compare Troup.ipynb
+++ b/notebooks/figures/Compare Troup.ipynb
@@ -227,9 +227,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Hand-picked, artisinal comparisons\n",
     "\n",
@@ -258,52 +256,59 @@
    },
    "outputs": [],
    "source": [
-    "with h5py.File(samples_file) as f:\n",
-    "    for label, ids in classes.items():\n",
-    "        # fig, axes = plt.subplots(len(ids), 2, figsize=(12, 4*len(ids)))\n",
-    "        fig = plt.figure(figsize=(12, 4*len(ids)))\n",
-    "        gs = GridSpec(len(ids), 3)\n",
-    "    \n",
-    "        for i, apogee_id in enumerate(ids):\n",
-    "            samples = JokerSamples.from_hdf5(f[apogee_id])\n",
-    "            star = AllStar.get_apogee_id(session, apogee_id)\n",
-    "            data = star.apogeervdata(clean=True)\n",
+    "rc = {\n",
+    "    'axes.labelsize': 18,\n",
+    "    'xtick.labelsize': 14,\n",
+    "    'ytick.labelsize': 14\n",
+    "}\n",
     "\n",
-    "            troup_row = troup[troup['APOGEE_ID'] == apogee_id]\n",
-    "            troup_orb = troup_to_orbit(troup_row)\n",
-    "            \n",
-    "            ax1 = fig.add_subplot(gs[i, :2])\n",
-    "            ax2 = fig.add_subplot(gs[i, 2])\n",
-    "            axes = [ax1, ax2]\n",
-    "            \n",
-    "            scatter_kw = dict()\n",
-    "            if i == 0:\n",
-    "                scatter_kw['label'] = 'The Joker'\n",
-    "            plot_two_panel(star, samples, axes=axes,\n",
-    "                           plot_data_orbits_kw=dict(highlight_P_extrema=False, \n",
-    "                                                    n_times=16384, \n",
-    "                                                    plot_kwargs=dict(color='tab:blue')),\n",
-    "                           scatter_kw=scatter_kw)\n",
+    "with mpl.rc_context(rc):\n",
+    "    with h5py.File(samples_file) as f:\n",
+    "        for label, ids in classes.items():\n",
+    "            # fig, axes = plt.subplots(len(ids), 2, figsize=(12, 4*len(ids)))\n",
+    "            fig = plt.figure(figsize=(8, 2.375*len(ids)))\n",
+    "            gs = GridSpec(len(ids), 3)\n",
     "\n",
-    "            # over-plot Troup orbit\n",
-    "            t2 = Time(np.linspace(*ax1.get_xlim(), 10000), format='mjd')\n",
-    "            ax1.plot(t2.tcb.mjd, troup_orb.radial_velocity(t2).to(u.km/u.s), \n",
-    "                     marker='', color='tab:orange', alpha=0.5)\n",
-    "            ax2.scatter(troup_row['PERIOD'], troup_row['ECC'], \n",
-    "                        marker='+', linewidth=2., s=100, color='tab:orange', \n",
-    "                        label='Troup+2016 fit')\n",
-    "            \n",
-    "            if i == 0:\n",
-    "                ax2.legend(loc='upper left', fontsize=16)\n",
-    "            \n",
-    "            # add text\n",
-    "            ylim = ax1.get_ylim()\n",
-    "            yptp = ylim[1] - ylim[0]\n",
-    "            ax1.text(data.t.tcb.mjd.min(), ylim[1]-0.1*yptp, apogee_id, fontsize=20)\n",
+    "            for i, apogee_id in enumerate(ids):\n",
+    "                samples = JokerSamples.from_hdf5(f[apogee_id])\n",
+    "                star = AllStar.get_apogee_id(session, apogee_id)\n",
+    "                data = star.apogeervdata(clean=False)\n",
     "\n",
-    "        fig.tight_layout()\n",
-    "        fig.savefig(path.join(figures_path, '{0}.pdf'.format('-'.join(label.split()))))\n",
-    "        plt.close(fig)"
+    "                troup_row = troup[troup['APOGEE_ID'] == apogee_id]\n",
+    "                troup_orb = troup_to_orbit(troup_row)\n",
+    "\n",
+    "                ax1 = fig.add_subplot(gs[i, :2])\n",
+    "                ax2 = fig.add_subplot(gs[i, 2])\n",
+    "                axes = [ax1, ax2]\n",
+    "\n",
+    "                scatter_kw = dict()\n",
+    "                if i == 0:\n",
+    "                    scatter_kw['label'] = 'The Joker'\n",
+    "                plot_two_panel(data, samples, axes=axes,\n",
+    "                               plot_data_orbits_kw=dict(highlight_P_extrema=False, \n",
+    "                                                        n_times=16384, \n",
+    "                                                        plot_kwargs=dict(color='tab:blue')),\n",
+    "                               scatter_kw=scatter_kw)\n",
+    "\n",
+    "                # over-plot Troup orbit\n",
+    "                t2 = Time(np.linspace(*ax1.get_xlim(), 10000), format='mjd')\n",
+    "                ax1.plot(t2.tcb.mjd, troup_orb.radial_velocity(t2).to(u.km/u.s), \n",
+    "                         marker='', color='tab:orange', alpha=0.5, zorder=-10)\n",
+    "                ax2.scatter(troup_row['PERIOD'], troup_row['ECC'], \n",
+    "                            marker='+', linewidth=2., s=100, color='tab:orange', \n",
+    "                            label='Troup+2016 fit', zorder=-10, alpha=0.75)\n",
+    "\n",
+    "                if i == 0:\n",
+    "                    ax2.legend(loc='upper left', fontsize=8)\n",
+    "\n",
+    "                # add text\n",
+    "                ylim = ax1.get_ylim()\n",
+    "                yptp = ylim[1] - ylim[0]\n",
+    "                ax1.text(data.t.tcb.mjd.min(), ylim[1]-0.1*yptp, apogee_id, fontsize=12)\n",
+    "\n",
+    "            fig.tight_layout()\n",
+    "            fig.savefig(path.join(figures_path, 'troup-{0}.pdf'.format('-'.join(label.split()))))\n",
+    "            plt.close(fig)"
    ]
   },
   {
@@ -458,7 +463,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
